php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31056 php_std_date() returns invalid formatted date if y2k_compliance is On
Submitted: 2004-12-10 20:45 UTC Modified: 2004-12-12 16:50 UTC
From: mike@php.net Assigned:
Status: Closed Package: Date/time related
PHP Version: 5.0.1 OS: Linux 2.4 (Debian)
Private report: No CVE-ID: None
 [2004-12-10 20:45 UTC] mike@php.net
Description:
------------
If INI directive "y2k_compliance" is set to "On", php_std_date() returns an invalid HTTP date:

Sun, 06-Nov-1994 08:49:37 GMT - which should be:
Sun, 06 Nov 1994 08:49:37 GMT - (RFC 822/1123)

If "y2k_compliance" is set to "Off", php_std_date()
returns a valid RFC850 HTTP date, though(like: Fri, 10-Dec-04 19:38:00 GMT).

http://www.w3.org/Protocols/rfc2616/rfc2616-sec3.html#sec3.3.1


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-12-11 09:59 UTC] mike@php.net
It's just a matter of changing 2 hyphens to spaces at http://lxr.php.net/source/php-src/ext/standard/datetime.c#952

Michael
 [2004-12-12 16:50 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC