Fixed bug #31056 (php_std_date() returns invalid formatted date if y2k_compliance is On).

# will MFH to 5.0.X and 4.3.X after release